--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./dist/style.css">
-    <title>Team Generator</title>
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">Team Generator</h1>
-            </div>
-        </div>
-    </div>
+  <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Team Profile</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+      <link href="https://fonts.googleapis.com/css?family=Public+Sans:300i,300,500&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+      <header>
+          <nav class="navbar" id="navbar">
+              <span class="navbar-brand mb-0 h1 w-100 text-center" id="navbar-text">Team Profile</span>
+          </nav>
+      </header>
+      <main>
+          <div class="container">
+              <div class="row justify-content-center" id="team-cards">
+                  
     <div class="container mb-3 card-custom shadow-lg border-primary rounded">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
@@ -23,12 +27,26 @@
             </div>
         </div>
         <div class="employee">
-            <p>Name: ${Manager.name}</p>
-            <p>Id: ${Manager.id}</p>
-            <p>Email: <a href="mailto:${Manager.email}">${Manager.email}</a></p>
-            <p>Office Number: ${Manager.officeNumber}</p>
+            <p>Name: grant</p>
+            <p>Id: 55</p>
+            <p>Email: <a href="mailto:reg@gmail.com">reg@gmail.com</a></p>
+            <p>Office Number: 4</p>
         </div>
     </div>
+    <div class="container mb-3 card-custom shadow-lg border-primary rounded">
+    <div class="row">
+        <div class="team-area col-12 d-flex justify-content-center">
+            <h2 class="manager">Intern</h2>
+        </div>
+    </div>
+    <div class="employee">
+        <p>Name: b</p>
+        <p>Id: 56</p>
+        <p>Email: <a href="mailto:b@gmail.com">b@gmail.com</a></p>
+        <p>Role (because still no read good): undefined</p>
+        <p>Alma Mater: florida</p>
+    </div>
+</div>
     <div class="container mb-3 card-custom shadow-lg border-primary rounded">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
@@ -36,26 +54,19 @@
             </div>
         </div>
         <div class="employee">
-            <p>Name: ${Engineer.name}</p>
-            <p>Id: ${Engineer.id}</p>
-            <p>Email: <a href="mailto:${Engineer.email}">${Engineer.email}</a></p>
-            <p>Role (in case you couldn't read the heading): ${Engineer.role}</p>
-            <p>GitHub: ${Engineer.gitHub}</p>
+            <p>Name: j</p>
+            <p>Id: 57</p>
+            <p>Email: <a href="mailto:j@gmail.com">j@gmail.com</a></p>
+            <p>Role (in case you couldn't read the heading): undefined</p>
+            <p>GitHub: j@github</p>
         </div>
     </div>
-    <div class="container mb-3 card-custom shadow-lg border-primary rounded">
-        <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
-                <h2 class="manager">Intern</h2>
-            </div>
-        </div>
-        <div class="employee">
-            <p>Name: ${Intern.name}</p>
-            <p>Id: ${Intern.id}</p>
-            <p>Email: <a href="mailto:${Intern.email}">${Intern.email}</a></p>
-            <p>Role (because still no read good): ${Intern.role}</p>
-            <p>Alma Mater: ${Intern.school}</p>
-        </div>
-    </div>
-</body>
-</html>
+              </div>
+          </div>
+      </main>
+      
+  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </html>
